Update title from 'Generator' to 'Cleaner'

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:hover {
 </head>
 <body>
 
-<h1>YouTube Hashtag Generator (Google Trends)</h1>
+<h1>YouTube Hashtag Cleaner (Google Trends)</h1>
 
   <h2>Steps:</h2>
 <ol>
